--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover">
+    <script async src="https://ga.jspm.io/npm:es-module-shims@1.10.0/dist/es-module-shims.js"></script>
     <%= javascript_importmap_tags %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
+    <noscript>
+      <style>
+        #loading { display: none !important; visibility: hidden !important; }
+        body { overflow: auto !important; }
+      </style>
+    </noscript>
     <%= turbo_include_tags %>
+    <title><%= content_for?(:title) ? yield(:title) : t('meta.default_title') %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : t('meta.default_description') %>">
     <meta name="robots" content="<%= should_not_index? ? 'noindex, nofollow' : 'index, follow' %>">
     <meta name="googlebot" content="<%= should_not_index? ? 'noindex, nofollow' : 'index, follow' %>">
     <meta name="bingbot" content="<%= should_not_index? ? 'noindex, nofollow' : 'index, follow' %>">
     <%= tag :link, rel: 'canonical', href: request.original_url.split('?').first %>
-    <title><%= content_for?(:title) ? yield(:title) : t('meta.default_title') %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : t('meta.default_description') %>">
     <meta name="theme-color" content="#ffffff">
     <meta name="copyright" content="© Omniscient Design - <%= t('meta.all_rights_reserved') %>">
     <meta property="og:locale" content="<%= I18n.locale %>">
@@ -30,14 +38,6 @@
     <meta name="twitter:image" content="<%= asset_url('logo-od-rs.jpg') %>">
     <meta name="recaptcha-site-key" content="<%= ENV['RECAPTCHA_SITE_KEY'] || Rails.application.credentials.dig(:recaptcha, :site_key) %>">
     <%= render 'application/favicon' %>
-    <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
-    <noscript>
-      <style>
-        #loading { display: none !important; visibility: hidden !important; }
-        body { overflow: auto !important; }
-      </style>
-    </noscript>
-    <!-- Google Tag Manager -->
     <% unless native_app? %>
       <script async>
         (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -47,7 +47,6 @@
             })(window,document,'script','dataLayer','GTM-KS23M7LQ');
       </script>
     <% end %>
-    <!-- End Google Tag Manager -->
   </head>
   <% theme = cookies&.[](:theme).presence || 'light-mode' %>
   <% body_class = %w[dark-mode light-mode].include?(theme) ? theme : '' %>
