--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= javascript_importmap_tags "application" %>
-    <%= turbo_include_tags %>
+    <!-- ✅ POLYFILL OBLIGATOIRE POUR FIREFOX & SAFARI -->
+    <script async src="https://ga.jspm.io/npm:es-module-shims@1.10.0/dist/es-module-shims.js"></script>
+    <!-- ✅ IMPORTMAP DOIT ÊTRE AVANT TOUT MODULE -->
+    <script type="importmap">
+      <%= Rails.application.importmap.to_json(resolver: self).html_safe %>
+    </script>
+    <!-- ✅ POINT D'ENTRÉE JS PRINCIPAL -->
+    <script type="module">
+      import "application"
+    </script>
     <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
     <title><%= content_for?(:title) ? yield(:title) : t('meta.default_title') %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : t('meta.default_description') %>">
@@ -39,11 +47,15 @@
     </noscript>
     <% unless native_app? %>
       <script async>
-        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-            })(window,document,'script','dataLayer','GTM-KS23M7LQ');
+        (function(w,d,s,l,i){
+          w[l]=w[l]||[];
+          w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
+          var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
+          j.async=true;
+          j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+          f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-KS23M7LQ');
       </script>
     <% end %>
   </head>
